Remove redundant deployment explanation from Section 4
- Removed 'Understanding the Deployment' subsection (architecture already in Section 1)
- Removed 'Key Differences from Lab 1' table (already removed from overview)
- Configuration details (Frontend, Workers, NATS) already explained in Section 1
- Replaced with simple transition sentence
- Removed ~18 lines of duplicate content

--- a/03-kv-aware-routing.ipynb
+++ b/03-kv-aware-routing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "aafdd09e",
+   "id": "bd0b3261",
    "metadata": {},
    "source": [
     "# Lab 3: KV-Aware Routing with Data-Parallel Workers\n",
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27c2ae0c",
+   "id": "11fecd9b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb6f1fbe",
+   "id": "1bd0a8c2",
    "metadata": {},
    "source": [
     "### Step 2: Install NATS with JetStream\n",
@@ -160,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f5e86383",
+   "id": "fed52882",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0fb6135b",
+   "id": "2571f867",
    "metadata": {},
    "source": [
     "### Step 3: Verify NATS Deployment"
@@ -195,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6dc8f741",
+   "id": "4ce145d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d78bc249",
+   "id": "e0266a2d",
    "metadata": {},
    "source": [
     "### Step 4: Test NATS Connectivity (Optional)"
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0cc96068",
+   "id": "1b03eba3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "772a3ed6",
+   "id": "b1e83ea3",
    "metadata": {},
    "source": [
     "---\n",
@@ -253,7 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aea115c4",
+   "id": "cf00f837",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e0b8adc",
+   "id": "940239dc",
    "metadata": {},
    "source": [
     "---\n",
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4572cfc3",
+   "id": "05fa1dee",
    "metadata": {},
    "source": [
     "### Step 1: Check Current GPU Usage"
@@ -299,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68bd9812",
+   "id": "3d7dd2d5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02ea9ee5",
+   "id": "227edc1a",
    "metadata": {},
    "source": [
     "### Step 2: Delete Lab 1 Deployment (If Still Running)\n",
@@ -338,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19120800",
+   "id": "0d50f116",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5b2f0ef",
+   "id": "676fabd0",
    "metadata": {},
    "source": [
     "### Step 3: Verify GPUs Are Available\n",
@@ -375,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ce38142",
+   "id": "95f7511a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,31 +390,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1f1940b",
+   "id": "5bc9fdee",
    "metadata": {},
    "source": [
     "---\n",
     "\n",
     "## Section 4: Deploy Data-Parallel Workers with KV-Aware Routing\n",
     "\n",
-    "### Understanding the Deployment\n",
-    "\n",
-    "We'll deploy 2 identical workers (data parallelism) with a KV-aware router that tracks cache state via NATS.\n",
-    "\n",
-    "**Configuration:**\n",
-    "- **Frontend**: 1 replica with `--router-mode kv` (enables cache-aware routing)\n",
-    "- **Workers**: 2 replicas, each with 1 GPU, publishing cache events to NATS\n",
-    "- **Architecture**: Data parallel (not disaggregated - no prefill/decode split)\n",
-    "- **Cache Coordination**: NATS (workers publish events, router subscribes)\n",
-    "\n",
-    "**Key Differences from Lab 1:**\n",
-    "\n",
-    "| Aspect | Lab 1 (Disaggregated) | Lab 3 (Data Parallel + KV-Aware) |\n",
-    "|--------|----------------------|-----------------------------------|\n",
-    "| Workers | Prefill + Decode (specialized) | Worker 1 + Worker 2 (identical) |\n",
-    "| Routing | Disaggregated router (prefill→decode) | KV-aware router (cache-based) |\n",
-    "| Message Bus | Not needed | NATS (required) |\n",
-    "| Worker Config | Different roles | Same role, different instances |\n",
+    "Now let's deploy 2 identical workers with a KV-aware router that uses NATS for cache coordination.\n",
     "\n",
     "### Step 1: Create Data-Parallel Deployment with KV-Aware Routing"
    ]
@@ -422,7 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9c560fc",
+   "id": "27a2e001",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -508,7 +491,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04975482",
+   "id": "5fe6b08c",
    "metadata": {},
    "source": [
     "**Key Configuration Flags:**\n",
@@ -529,7 +512,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c630c81b",
+   "id": "225ef03e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -564,7 +547,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3e930fa",
+   "id": "31638693",
    "metadata": {},
    "source": [
     "### Step 3: Wait for Deployment"
@@ -573,7 +556,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d35b711e",
+   "id": "13d55512",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +586,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dfea04ee",
+   "id": "982878a7",
    "metadata": {},
    "source": [
     "### Step 4: Test Basic Inference"
@@ -612,7 +595,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10ee8dd5",
+   "id": "c45c30f1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -637,7 +620,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eae56bc3",
+   "id": "b9284e74",
    "metadata": {},
    "source": [
     "---\n",
@@ -652,7 +635,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c4f511a",
+   "id": "4ee5b810",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -707,7 +690,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d4835bc",
+   "id": "79342a02",
    "metadata": {},
    "source": [
     "**Expected Behavior:**\n",
@@ -720,7 +703,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "269b6a6e",
+   "id": "0b027f64",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -740,7 +723,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "336d54e2",
+   "id": "c02b079f",
    "metadata": {},
    "source": [
     "**What to look for:**\n",
@@ -754,7 +737,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36d2ff2e",
+   "id": "ca2c0ee9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -801,7 +784,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98171e32",
+   "id": "a9f51f12",
    "metadata": {},
    "source": [
     "---\n",
@@ -891,7 +874,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0986672e",
+   "id": "af195418",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -922,7 +905,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87692c3e",
+   "id": "2853cef0",
    "metadata": {},
    "source": [
     "**Note**: Cache hit/miss metrics depend on workload patterns. Even on a single node with multiple GPUs, KV-aware routing can improve cache hits by directing requests to the worker that already has relevant cache blocks.\n",
@@ -937,7 +920,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f2d75d6a",
+   "id": "7e5008d6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -954,7 +937,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "468256ef",
+   "id": "ce2fe57b",
    "metadata": {},
    "source": [
     "### Step 2: Verify Lab 1 Deployment is Still Running\n",
@@ -965,7 +948,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40f85657",
+   "id": "79abda6c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -990,7 +973,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7b8f55e",
+   "id": "8b135af7",
    "metadata": {},
    "source": [
     "---\n",
@@ -1022,7 +1005,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "946fe3e5",
+   "id": "49651a5f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1045,7 +1028,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c0fe8ab",
+   "id": "595cb23e",
    "metadata": {},
    "source": [
     "### Workers Not Discovered"
@@ -1054,7 +1037,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c864c57",
+   "id": "117a9264",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1078,7 +1061,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b0eaffd",
+   "id": "fda618cc",
    "metadata": {},
    "source": [
     "### No Requests Reaching Workers"
@@ -1087,7 +1070,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20928f0d",
+   "id": "5c4e7f0d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1111,7 +1094,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58a033a2",
+   "id": "25db36fe",
    "metadata": {},
    "source": [
     "### Understanding Cache Sharing with NIXL\n",
@@ -1252,7 +1235,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae9182a0",
+   "id": "80be63e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1287,7 +1270,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c67b805c",
+   "id": "6e58fe73",
    "metadata": {},
    "source": [
     "### Step 2: Install etcd Coordination Layer\n",
@@ -1298,7 +1281,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2b12437",
+   "id": "d6730e47",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1330,7 +1313,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60017c7b",
+   "id": "0b0eb1fd",
    "metadata": {},
    "source": [
     "### Step 3: Verify Infrastructure\n",
@@ -1341,7 +1324,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c031f3ec",
+   "id": "6e310158",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1374,7 +1357,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9dec8b04",
+   "id": "47bbee15",
    "metadata": {},
    "source": [
     "### Step 4: Enable Prometheus Monitoring (Optional)\n",
@@ -1385,7 +1368,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5713912c",
+   "id": "c6461473",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1435,7 +1418,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf98d2d1",
+   "id": "783b03cd",
    "metadata": {},
    "source": [
     "### Cleanup (NATS/etcd)\n",
@@ -1446,7 +1429,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8c6e334",
+   "id": "e8110fa3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1471,7 +1454,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07300ae5",
+   "id": "ac583acc",
    "metadata": {},
    "source": [
     "### Configuring Dynamo to Use NATS/etcd\n",
