Delete Section 6 (trade-offs) and move cache monitoring to Section 5
Major deletions:
- K8s-Native vs NATS comparison (confusing since lab uses NATS)
- Single-Node vs Multi-Node comparison (incorrect NIXL claims for data-parallel)
- Performance Characteristics (exact duplicate of Section 1)
- Broken formatting and mismatched code blocks

Changes:
- Moved Cache Monitoring to Section 5 Step 4 (logical placement after demo)
- Renumbered old Section 7 (Cleanup) to Section 6
- Added 'What to observe' notes for cache monitoring

Technical fixes:
- Removed false claims about NIXL transferring cache in data-parallel mode
- Removed K8s-native recommendation that contradicts NATS deployment
- Removed ~110 lines of redundant/incorrect content

--- a/03-kv-aware-routing.ipynb
+++ b/03-kv-aware-routing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "bd0b3261",
+   "id": "cc8dc4ed",
    "metadata": {},
    "source": [
     "# Lab 3: KV-Aware Routing with Data-Parallel Workers\n",
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11fecd9b",
+   "id": "1df6268a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1bd0a8c2",
+   "id": "ccd59926",
    "metadata": {},
    "source": [
     "### Step 2: Install NATS with JetStream\n",
@@ -160,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fed52882",
+   "id": "1f8a2675",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2571f867",
+   "id": "77c4fe90",
    "metadata": {},
    "source": [
     "### Step 3: Verify NATS Deployment"
@@ -195,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ce145d1",
+   "id": "5eb291c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0266a2d",
+   "id": "c5b01ce5",
    "metadata": {},
    "source": [
     "### Step 4: Test NATS Connectivity (Optional)"
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b03eba3",
+   "id": "b391ac55",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1e83ea3",
+   "id": "2811b3fc",
    "metadata": {},
    "source": [
     "---\n",
@@ -253,7 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf00f837",
+   "id": "86ac152d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "940239dc",
+   "id": "fdf83474",
    "metadata": {},
    "source": [
     "---\n",
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05fa1dee",
+   "id": "b4a19757",
    "metadata": {},
    "source": [
     "### Step 1: Check Current GPU Usage"
@@ -299,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d7dd2d5",
+   "id": "c02cb0b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "227edc1a",
+   "id": "5f5a85e4",
    "metadata": {},
    "source": [
     "### Step 2: Delete Lab 1 Deployment (If Still Running)\n",
@@ -338,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d50f116",
+   "id": "13f47eda",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "676fabd0",
+   "id": "e6e0d31d",
    "metadata": {},
    "source": [
     "### Step 3: Verify GPUs Are Available\n",
@@ -375,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95f7511a",
+   "id": "007d5136",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5bc9fdee",
+   "id": "440a683b",
    "metadata": {},
    "source": [
     "---\n",
@@ -405,7 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27a2e001",
+   "id": "25ce5d69",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5fe6b08c",
+   "id": "2710119e",
    "metadata": {},
    "source": [
     "**Key Configuration Flags:**\n",
@@ -512,7 +512,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "225ef03e",
+   "id": "4f880572",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31638693",
+   "id": "77c15c61",
    "metadata": {},
    "source": [
     "### Step 3: Wait for Deployment"
@@ -556,7 +556,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13d55512",
+   "id": "64b208a3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "982878a7",
+   "id": "db202865",
    "metadata": {},
    "source": [
     "### Step 4: Test Basic Inference"
@@ -595,7 +595,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c45c30f1",
+   "id": "ae930dcf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -620,7 +620,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9284e74",
+   "id": "78cd05e6",
    "metadata": {},
    "source": [
     "---\n",
@@ -635,7 +635,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ee5b810",
+   "id": "41771f41",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79342a02",
+   "id": "780b9228",
    "metadata": {},
    "source": [
     "**Expected Behavior:**\n",
@@ -703,7 +703,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b027f64",
+   "id": "0d8dfa33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -723,7 +723,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c02b079f",
+   "id": "3600f6d2",
    "metadata": {},
    "source": [
     "**What to look for:**\n",
@@ -737,7 +737,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca2c0ee9",
+   "id": "434cd4f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -784,97 +784,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9f51f12",
+   "id": "790603cb",
    "metadata": {},
    "source": [
-    "---\n",
-    "\n",
-    "## Section 6: Understanding KV-Aware Routing Trade-offs\n",
-    "\n",
-    "### K8s-Native vs NATS/etcd Comparison (v0.8.0+)\n",
-    "\n",
-    "| Aspect | K8s-Native | NATS/etcd |\n",
-    "|--------|------------|-----------|\n",
-    "| **Setup Complexity** | ✅ Simple (no extra infra) | ⚠️ Complex (2 systems to manage) |\n",
-    "| **Latency** | ✅ Lower (direct TCP) | ⚠️ Slightly higher (pub/sub) |\n",
-    "| **Scale Sweet Spot** | Most deployments | Extreme scale |\n",
-    "| **Discovery** | EndpointSlices (built-in) | etcd (external) |\n",
-    "| **Transport** | TCP | NATS + TCP |\n",
-    "| **Ops Burden** | ✅ Low | ⚠️ Medium-High |\n",
-    "| **Multi-Region** | ⚠️ Limited | ✅ Excellent |\n",
-    "| **Custom Routing** | ⚠️ Basic | ✅ Advanced |\n",
-    "| **Cache Coordination** | ✅ Yes (via planner) | ✅ Yes (via NATS) |\n",
-    "| **NIXL Support** | ✅ Yes | ✅ Yes |\n",
-    "\n",
-    "**Recommendation:** Start with K8s-native. Only add NATS/etcd if you need extreme scale or multi-region capabilities.\n",
-    "\n",
-    "### Single-Node vs Multi-Node\n",
-    "\n",
-    "**Single Node with Multiple GPUs (Typical Dev Setup)**:\n",
-    "```\n",
-    "✓ KV-aware routing still beneficial (routes to worker with cached data)\n",
-    "✓ Learning opportunity to understand architecture\n",
-    "✓ Workers can share cache blocks via NIXL locally\n",
-    "✓ K8s-native = simpler (no NATS/etcd overhead)\n",
-    "✗ Less dramatic network benefits (same machine)\n",
-    "```\n",
-    "\n",
-    "**Multi-Node (Production)**:\n",
-    "```\n",
-    "✓ KV-aware Router directs requests to nodes with relevant cache\n",
-    "✓ NIXL transfers cache data efficiently (RDMA/TCP between nodes)\n",
-    "✓ Improved cache hit rates = lower latency\n",
-    "✓ Better resource utilization across cluster\n",
-    "✓ K8s-native recommended for most deployments\n",
-    "✓ NATS/etcd for extreme scale or multi-region\n",
-    "```\n",
-    "✓ Enables advanced features (cache migration, load balancing)\n",
-    "✗ Network latency between nodes\n",
-    "✗ Increased complexity in debugging\n",
-    "```\n",
-    "\n",
-    "### Performance Characteristics\n",
-    "\n",
-    "```bash\n",
-    "# Display KV-aware routing characteristics\n",
-    "cat <<'EOF'\n",
-    "\n",
-    "KV-Aware Routing Benefits:\n",
-    "\n",
-    "When KV-Aware Routing Helps Most:\n",
-    "  • Multiple GPUs or nodes with high traffic\n",
-    "  • Repeated queries with shared prefixes (high cache hit potential)\n",
-    "  • Long context lengths (expensive to recompute prefills)\n",
-    "  • Batch processing workloads with similar prompts\n",
-    "  • Chatbots and conversational AI (repeated system prompts)\n",
-    "\n",
-    "When It May Not Help:\n",
-    "  • Single worker deployments (no routing decisions to make)\n",
-    "  • Completely unique queries every time (low cache hit rate)\n",
-    "  • Very short context lengths (cache overhead > savings)\n",
-    "  • Real-time streaming with entirely unique prompts\n",
-    "\n",
-    "Architecture Notes:\n",
-    "  • KV-Aware Routing = Router tracks cache state and makes placement decisions\n",
-    "  • NATS = Cache event coordination (workers publish, router subscribes)\n",
-    "  • Data Parallel = Multiple identical workers, each handles full inference\n",
-    "  • Local KV Cache = Each worker stores its own cache (no transfer between workers)\n",
-    "EOF\n",
-    "```\n",
-    "\n",
-    "---\n",
-    "\n",
-    "## Section 6: Advanced Distributed Features\n",
-    "\n",
-    "### Cache Monitoring\n",
-    "\n",
-    "Check distributed coordination through worker logs:"
+    "### Step 4: Check Worker Logs for Cache Activity"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af195418",
+   "id": "d0404beb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -905,14 +824,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2853cef0",
+   "id": "8e868959",
    "metadata": {},
    "source": [
-    "**Note**: Cache hit/miss metrics depend on workload patterns. Even on a single node with multiple GPUs, KV-aware routing can improve cache hits by directing requests to the worker that already has relevant cache blocks.\n",
+    "**What to observe:**\n",
+    "- Prefix cache hit/miss rates in worker logs\n",
+    "- NATS connection status (should be connected)\n",
+    "- Cache block allocation and reuse patterns\n",
+    "- Router routing requests to the same worker for similar prefixes\n",
     "\n",
     "---\n",
     "\n",
-    "## Section 7: Cleanup\n",
+    "## Section 6: Cleanup\n",
     "\n",
     "### Step 1: Remove KV-Aware Routing Deployment"
    ]
@@ -920,7 +843,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e5008d6",
+   "id": "f699d981",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -937,7 +860,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce2fe57b",
+   "id": "d8c287e4",
    "metadata": {},
    "source": [
     "### Step 2: Verify Lab 1 Deployment is Still Running\n",
@@ -948,7 +871,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79abda6c",
+   "id": "e43f21e6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -973,7 +896,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b135af7",
+   "id": "e9b5a7fe",
    "metadata": {},
    "source": [
     "---\n",
@@ -1005,7 +928,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49651a5f",
+   "id": "ff19b7a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1028,7 +951,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "595cb23e",
+   "id": "b46597a9",
    "metadata": {},
    "source": [
     "### Workers Not Discovered"
@@ -1037,7 +960,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "117a9264",
+   "id": "458b089b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1061,7 +984,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fda618cc",
+   "id": "401348b0",
    "metadata": {},
    "source": [
     "### No Requests Reaching Workers"
@@ -1070,7 +993,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c4e7f0d",
+   "id": "f09ad858",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1094,7 +1017,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25db36fe",
+   "id": "c063e242",
    "metadata": {},
    "source": [
     "### Understanding Cache Sharing with NIXL\n",
@@ -1235,7 +1158,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80be63e3",
+   "id": "871dd3ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1270,7 +1193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e58fe73",
+   "id": "2ce55dd4",
    "metadata": {},
    "source": [
     "### Step 2: Install etcd Coordination Layer\n",
@@ -1281,7 +1204,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6730e47",
+   "id": "adaf5598",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1313,7 +1236,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b0eb1fd",
+   "id": "cad786ac",
    "metadata": {},
    "source": [
     "### Step 3: Verify Infrastructure\n",
@@ -1324,7 +1247,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e310158",
+   "id": "149dd6f0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1357,7 +1280,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47bbee15",
+   "id": "666f24ae",
    "metadata": {},
    "source": [
     "### Step 4: Enable Prometheus Monitoring (Optional)\n",
@@ -1368,7 +1291,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6461473",
+   "id": "18ace5bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1418,7 +1341,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "783b03cd",
+   "id": "ad7ba0cf",
    "metadata": {},
    "source": [
     "### Cleanup (NATS/etcd)\n",
@@ -1429,7 +1352,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8110fa3",
+   "id": "b7af4246",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1454,7 +1377,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac583acc",
+   "id": "d21a2bd7",
    "metadata": {},
    "source": [
     "### Configuring Dynamo to Use NATS/etcd\n",
