--- a/03-kv-aware-routing.ipynb
+++ b/03-kv-aware-routing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "cc8dc4ed",
+   "id": "94a666cf",
    "metadata": {},
    "source": [
     "# Lab 3: KV-Aware Routing with Data-Parallel Workers\n",
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1df6268a",
+   "id": "e435e946",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ccd59926",
+   "id": "8cef2c6a",
    "metadata": {},
    "source": [
     "### Step 2: Install NATS with JetStream\n",
@@ -160,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f8a2675",
+   "id": "683cc129",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77c4fe90",
+   "id": "fe0fd406",
    "metadata": {},
    "source": [
     "### Step 3: Verify NATS Deployment"
@@ -195,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5eb291c1",
+   "id": "f9576110",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5b01ce5",
+   "id": "2d22a74b",
    "metadata": {},
    "source": [
     "### Step 4: Test NATS Connectivity (Optional)"
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b391ac55",
+   "id": "5690ca02",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2811b3fc",
+   "id": "0253f185",
    "metadata": {},
    "source": [
     "---\n",
@@ -253,7 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86ac152d",
+   "id": "11b0d73b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fdf83474",
+   "id": "7e53cfae",
    "metadata": {},
    "source": [
     "---\n",
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4a19757",
+   "id": "d5d6691a",
    "metadata": {},
    "source": [
     "### Step 1: Check Current GPU Usage"
@@ -299,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c02cb0b4",
+   "id": "6d09a19a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f5a85e4",
+   "id": "83c4e86e",
    "metadata": {},
    "source": [
     "### Step 2: Delete Lab 1 Deployment (If Still Running)\n",
@@ -338,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13f47eda",
+   "id": "6c7cb102",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6e0d31d",
+   "id": "c27317aa",
    "metadata": {},
    "source": [
     "### Step 3: Verify GPUs Are Available\n",
@@ -375,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "007d5136",
+   "id": "0e415db2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "440a683b",
+   "id": "a73c816b",
    "metadata": {},
    "source": [
     "---\n",
@@ -405,7 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25ce5d69",
+   "id": "9c339aa2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2710119e",
+   "id": "f230d597",
    "metadata": {},
    "source": [
     "**Key Configuration Flags:**\n",
@@ -512,7 +512,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f880572",
+   "id": "58284f0f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77c15c61",
+   "id": "dd48ef73",
    "metadata": {},
    "source": [
     "### Step 3: Wait for Deployment"
@@ -556,7 +556,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64b208a3",
+   "id": "4b5f2bd1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db202865",
+   "id": "a4191098",
    "metadata": {},
    "source": [
     "### Step 4: Test Basic Inference"
@@ -595,7 +595,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae930dcf",
+   "id": "5ad5e1c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -620,7 +620,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78cd05e6",
+   "id": "a477e528",
    "metadata": {},
    "source": [
     "---\n",
@@ -635,7 +635,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41771f41",
+   "id": "8e1524ef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "780b9228",
+   "id": "ecd85791",
    "metadata": {},
    "source": [
     "**Expected Behavior:**\n",
@@ -703,7 +703,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d8dfa33",
+   "id": "019a62b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -723,7 +723,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3600f6d2",
+   "id": "d15e04d9",
    "metadata": {},
    "source": [
     "**What to look for:**\n",
@@ -737,7 +737,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "434cd4f2",
+   "id": "ed3e4944",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -784,7 +784,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "790603cb",
+   "id": "0cef30d8",
    "metadata": {},
    "source": [
     "### Step 4: Check Worker Logs for Cache Activity"
@@ -793,7 +793,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0404beb",
+   "id": "66a8c34c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -824,7 +824,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e868959",
+   "id": "47d345ce",
    "metadata": {},
    "source": [
     "**What to observe:**\n",
@@ -835,7 +835,149 @@
     "\n",
     "---\n",
     "\n",
-    "## Section 6: Cleanup\n",
+    "## Summary\n",
+    "\n",
+    "You've deployed KV-aware routing with data-parallel workers, where the router intelligently directs requests to workers based on their cached data.\n",
+    "\n",
+    "**What you learned:**\n",
+    "- NATS coordinates cache state across workers (events published/subscribed)\n",
+    "- Router tracks which workers have cached which prefixes\n",
+    "- Requests with similar prefixes get routed to the same worker for cache reuse\n",
+    "- Scales horizontally—add more workers for more traffic\n",
+    "- Works on single nodes with multiple GPUs or across multi-node clusters\n",
+    "\n",
+    "**Key architectural choice:**\n",
+    "- Use **disaggregated serving** (Lab 1) for predictable latency on individual requests\n",
+    "- Use **distributed serving** (Lab 3) when you have high traffic with cache-friendly patterns\n",
+    "\n",
+    "**Next steps:** Experiment with different worker counts, monitor cache hit rates in Grafana, or explore the optional NATS/etcd setup in Appendix B/C for extreme-scale deployments.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Troubleshooting\n",
+    "\n",
+    "### Deployment Not Starting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "65acab6a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "# Check deployment status\n",
+    "export NAMESPACE=${NAMESPACE:-dynamo}\n",
+    "kubectl describe dynamographdeployment vllm-kv-demo -n $NAMESPACE\n",
+    "\n",
+    "# Check pod status\n",
+    "kubectl get pods -n $NAMESPACE -l nvidia.com/dynamo-graph-deployment-name=vllm-kv-demo\n",
+    "\n",
+    "# Check worker logs\n",
+    "kubectl logs -n $NAMESPACE -l nvidia.com/dynamo-component=VllmWorker\n",
+    "\n",
+    "# Common issues:\n",
+    "# - Insufficient GPU resources\n",
+    "# - Worker gang scheduling waiting for all pods\n",
+    "# - Image pull errors"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "22448ddd",
+   "metadata": {},
+   "source": [
+    "### Workers Not Discovered"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2c9275d2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "# Check K8s services and endpoints\n",
+    "export NAMESPACE=${NAMESPACE:-dynamo}\n",
+    "kubectl get svc -n $NAMESPACE\n",
+    "kubectl get endpoints -n $NAMESPACE\n",
+    "\n",
+    "# Check EndpointSlices (K8s-native discovery)\n",
+    "kubectl get endpointslices -n $NAMESPACE\n",
+    "\n",
+    "# Check worker pods are running\n",
+    "kubectl get pods -n $NAMESPACE -l nvidia.com/dynamo-component=VllmWorker\n",
+    "\n",
+    "# Common issues:\n",
+    "# - Workers not fully ready (check 1/1 Running)\n",
+    "# - Service selectors not matching pods\n",
+    "# - Network policies blocking communication"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "55860a6c",
+   "metadata": {},
+   "source": [
+    "### No Requests Reaching Workers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "04d2cbdd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "# Test frontend endpoint\n",
+    "export NAMESPACE=${NAMESPACE:-dynamo}\n",
+    "export NODE_IP=$(kubectl get nodes -o jsonpath='{.items[0].status.addresses[?(@.type==\"InternalIP\")].address}')\n",
+    "curl -v http://$NODE_IP:30200/v1/models\n",
+    "\n",
+    "# Check frontend logs\n",
+    "kubectl logs -n $NAMESPACE -l nvidia.com/dynamo-component=Frontend\n",
+    "\n",
+    "# Verify NodePort service exists\n",
+    "kubectl get svc vllm-kv-frontend-np -n $NAMESPACE\n",
+    "\n",
+    "# Common issues:\n",
+    "# - NodePort service not created\n",
+    "# - Frontend pod not ready\n",
+    "# - Port conflicts on node"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ea70cb0e",
+   "metadata": {},
+   "source": [
+    "### Understanding Cache Sharing with NIXL\n",
+    "\n",
+    "**NIXL** (NVIDIA Inference Transfer Library) handles KV cache transfer between workers:\n",
+    "\n",
+    "- Transfers actual KV cache data (gigabytes of tensors)\n",
+    "- Uses RDMA, TCP, or CPU/SSD offload  \n",
+    "- Direct worker-to-worker communication\n",
+    "- Not visible in application logs (happens at library level)\n",
+    "\n",
+    "**On Single Node**:\n",
+    "- Cache transfers via NIXL are faster (local)\n",
+    "- Workers coordinate via K8s-native discovery\n",
+    "- Benefits still apply with multiple GPU workers\n",
+    "\n",
+    "**Benefits Require**:\n",
+    "- Multiple workers (even on same node)\n",
+    "- Repeated queries with shared prefixes\n",
+    "- Workload that generates cache hits\n",
+    "\n",
+    "**For NATS/etcd troubleshooting**, see Appendix C\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Appendix A: Cleanup\n",
     "\n",
     "### Step 1: Remove KV-Aware Routing Deployment"
    ]
@@ -843,7 +985,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f699d981",
+   "id": "7c58a089",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -860,7 +1002,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8c287e4",
+   "id": "4f1e92eb",
    "metadata": {},
    "source": [
     "### Step 2: Verify Lab 1 Deployment is Still Running\n",
@@ -871,7 +1013,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e43f21e6",
+   "id": "43bb8eb9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -896,156 +1038,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9b5a7fe",
+   "id": "d7a3448f",
    "metadata": {},
    "source": [
     "---\n",
     "\n",
-    "## Summary\n",
+    "## Appendix B: NATS/etcd Architecture (Optional - Extreme Scale)\n",
     "\n",
-    "You've deployed KV-aware routing with data-parallel workers, where the router intelligently directs requests to workers based on their cached data.\n",
-    "\n",
-    "**What you learned:**\n",
-    "- NATS coordinates cache state across workers (events published/subscribed)\n",
-    "- Router tracks which workers have cached which prefixes\n",
-    "- Requests with similar prefixes get routed to the same worker for cache reuse\n",
-    "- Scales horizontally—add more workers for more traffic\n",
-    "- Works on single nodes with multiple GPUs or across multi-node clusters\n",
-    "\n",
-    "**Key architectural choice:**\n",
-    "- Use **disaggregated serving** (Lab 1) for predictable latency on individual requests\n",
-    "- Use **distributed serving** (Lab 3) when you have high traffic with cache-friendly patterns\n",
-    "\n",
-    "**Next steps:** Experiment with different worker counts, monitor cache hit rates in Grafana, or explore the optional NATS/etcd setup in Appendix B for extreme-scale deployments.\n",
-    "\n",
-    "---\n",
-    "\n",
-    "## Troubleshooting\n",
-    "\n",
-    "### Deployment Not Starting"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ff19b7a0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%bash\n",
-    "# Check deployment status\n",
-    "export NAMESPACE=${NAMESPACE:-dynamo}\n",
-    "kubectl describe dynamographdeployment vllm-kv-demo -n $NAMESPACE\n",
-    "\n",
-    "# Check pod status\n",
-    "kubectl get pods -n $NAMESPACE -l nvidia.com/dynamo-graph-deployment-name=vllm-kv-demo\n",
-    "\n",
-    "# Check worker logs\n",
-    "kubectl logs -n $NAMESPACE -l nvidia.com/dynamo-component=VllmWorker\n",
-    "\n",
-    "# Common issues:\n",
-    "# - Insufficient GPU resources\n",
-    "# - Worker gang scheduling waiting for all pods\n",
-    "# - Image pull errors"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b46597a9",
-   "metadata": {},
-   "source": [
-    "### Workers Not Discovered"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "458b089b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%bash\n",
-    "# Check K8s services and endpoints\n",
-    "export NAMESPACE=${NAMESPACE:-dynamo}\n",
-    "kubectl get svc -n $NAMESPACE\n",
-    "kubectl get endpoints -n $NAMESPACE\n",
-    "\n",
-    "# Check EndpointSlices (K8s-native discovery)\n",
-    "kubectl get endpointslices -n $NAMESPACE\n",
-    "\n",
-    "# Check worker pods are running\n",
-    "kubectl get pods -n $NAMESPACE -l nvidia.com/dynamo-component=VllmWorker\n",
-    "\n",
-    "# Common issues:\n",
-    "# - Workers not fully ready (check 1/1 Running)\n",
-    "# - Service selectors not matching pods\n",
-    "# - Network policies blocking communication"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "401348b0",
-   "metadata": {},
-   "source": [
-    "### No Requests Reaching Workers"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f09ad858",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%bash\n",
-    "# Test frontend endpoint\n",
-    "export NAMESPACE=${NAMESPACE:-dynamo}\n",
-    "export NODE_IP=$(kubectl get nodes -o jsonpath='{.items[0].status.addresses[?(@.type==\"InternalIP\")].address}')\n",
-    "curl -v http://$NODE_IP:30200/v1/models\n",
-    "\n",
-    "# Check frontend logs\n",
-    "kubectl logs -n $NAMESPACE -l nvidia.com/dynamo-component=Frontend\n",
-    "\n",
-    "# Verify NodePort service exists\n",
-    "kubectl get svc vllm-kv-frontend-np -n $NAMESPACE\n",
-    "\n",
-    "# Common issues:\n",
-    "# - NodePort service not created\n",
-    "# - Frontend pod not ready\n",
-    "# - Port conflicts on node"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c063e242",
-   "metadata": {},
-   "source": [
-    "### Understanding Cache Sharing with NIXL\n",
-    "\n",
-    "**NIXL** (NVIDIA Inference Transfer Library) handles KV cache transfer between workers:\n",
-    "\n",
-    "- Transfers actual KV cache data (gigabytes of tensors)\n",
-    "- Uses RDMA, TCP, or CPU/SSD offload  \n",
-    "- Direct worker-to-worker communication\n",
-    "- Not visible in application logs (happens at library level)\n",
-    "\n",
-    "**On Single Node**:\n",
-    "- Cache transfers via NIXL are faster (local)\n",
-    "- Workers coordinate via K8s-native discovery\n",
-    "- Benefits still apply with multiple GPU workers\n",
-    "\n",
-    "**Benefits Require**:\n",
-    "- Multiple workers (even on same node)\n",
-    "- Repeated queries with shared prefixes\n",
-    "- Workload that generates cache hits\n",
-    "\n",
-    "**For NATS/etcd troubleshooting**, see Appendix B\n",
-    "\n",
-    "---\n",
-    "\n",
-    "## Appendix A: NATS/etcd Architecture (Optional - Extreme Scale)\n",
-    "\n",
-    "This appendix covers the NATS/etcd deployment architecture for extreme scale deployments or multi-region setups. **Most users should use K8s-native deployment** (covered in the main lab).\n",
+    "This appendix covers the NATS/etcd deployment architecture for extreme scale deployments or multi-region setups.\n",
     "\n",
     "### When You Need NATS/etcd\n",
     "\n",
@@ -1133,7 +1133,7 @@
     "\n",
     "---\n",
     "\n",
-    "## Appendix B: NATS/etcd Deployment Steps (Optional)\n",
+    "## Appendix C: NATS/etcd Deployment Steps (Optional)\n",
     "\n",
     "**⚠️ WARNING:** These steps are ONLY for users deploying NATS/etcd for extreme-scale scenarios. Most users should skip this appendix and use K8s-native deployment (covered in the main lab).\n",
     "\n",
@@ -1158,7 +1158,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "871dd3ab",
+   "id": "b9fc0289",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1193,7 +1193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ce55dd4",
+   "id": "60a62d5f",
    "metadata": {},
    "source": [
     "### Step 2: Install etcd Coordination Layer\n",
@@ -1204,7 +1204,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "adaf5598",
+   "id": "99877776",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1236,7 +1236,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cad786ac",
+   "id": "729476f7",
    "metadata": {},
    "source": [
     "### Step 3: Verify Infrastructure\n",
@@ -1247,7 +1247,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "149dd6f0",
+   "id": "3afb1be6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1280,7 +1280,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "666f24ae",
+   "id": "578f9204",
    "metadata": {},
    "source": [
     "### Step 4: Enable Prometheus Monitoring (Optional)\n",
@@ -1291,7 +1291,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18ace5bc",
+   "id": "36cd7451",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1341,7 +1341,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad7ba0cf",
+   "id": "bb5e1e6e",
    "metadata": {},
    "source": [
     "### Cleanup (NATS/etcd)\n",
@@ -1352,7 +1352,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b7af4246",
+   "id": "61b7320c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1377,7 +1377,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d21a2bd7",
+   "id": "bc13a10c",
    "metadata": {},
    "source": [
     "### Configuring Dynamo to Use NATS/etcd\n",
