Remove Advanced Topics section with NATS/etcd links
- Removed leftover 'Advanced Topics (NATS/etcd - Optional)' subsection
- NATS/etcd links no longer relevant after removing appendices
- Keeps only Core Documentation and Community Resources

--- a/03-kv-aware-routing.ipynb
+++ b/03-kv-aware-routing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7b946d21",
+   "id": "bf281873",
    "metadata": {},
    "source": [
     "# Lab 3: KV-Aware Routing with Data-Parallel Workers\n",
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40f22a27",
+   "id": "43f58ddc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5358016",
+   "id": "5e67adec",
    "metadata": {},
    "source": [
     "### Step 2: Install NATS with JetStream\n",
@@ -160,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2dcfec7",
+   "id": "c58e1786",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "221a1ea9",
+   "id": "4e0e93a3",
    "metadata": {},
    "source": [
     "### Step 3: Verify NATS Deployment"
@@ -195,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "898c54ca",
+   "id": "723d1c5d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08e895be",
+   "id": "f80a755c",
    "metadata": {},
    "source": [
     "### Step 4: Test NATS Connectivity (Optional)"
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23c89c43",
+   "id": "3f3a7140",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a3abc29",
+   "id": "00e7838a",
    "metadata": {},
    "source": [
     "---\n",
@@ -253,7 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6a621d3",
+   "id": "7d09cc0c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97877225",
+   "id": "d6a75413",
    "metadata": {},
    "source": [
     "---\n",
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84bc86cf",
+   "id": "5e0cfe05",
    "metadata": {},
    "source": [
     "### Step 1: Check Current GPU Usage"
@@ -299,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c8a5bc7",
+   "id": "1119f22c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2a4cc5b",
+   "id": "6e0d9cfc",
    "metadata": {},
    "source": [
     "### Step 2: Delete Lab 1 Deployment (If Still Running)\n",
@@ -338,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bee5df97",
+   "id": "73927de8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adbd9aaf",
+   "id": "21cf1771",
    "metadata": {},
    "source": [
     "### Step 3: Verify GPUs Are Available\n",
@@ -375,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc1b6df4",
+   "id": "ae5960b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5410f621",
+   "id": "7bae4f03",
    "metadata": {},
    "source": [
     "---\n",
@@ -405,7 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13e980a5",
+   "id": "205e995b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d354462",
+   "id": "d969c91e",
    "metadata": {},
    "source": [
     "**Key Configuration Flags:**\n",
@@ -512,7 +512,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "374273ee",
+   "id": "5d28a565",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04071bbb",
+   "id": "2e03494c",
    "metadata": {},
    "source": [
     "### Step 3: Wait for Deployment"
@@ -556,7 +556,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0aa8622f",
+   "id": "ba373e2a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f816f84",
+   "id": "504edc12",
    "metadata": {},
    "source": [
     "### Step 4: Test Basic Inference"
@@ -595,7 +595,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58204da1",
+   "id": "c698f5a3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -620,7 +620,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80149999",
+   "id": "29974620",
    "metadata": {},
    "source": [
     "---\n",
@@ -635,7 +635,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "022a5af5",
+   "id": "d500f8fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5225d92",
+   "id": "96fdc759",
    "metadata": {},
    "source": [
     "**Expected Behavior:**\n",
@@ -703,7 +703,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a57c8583",
+   "id": "8fa20575",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -723,7 +723,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6c747cb",
+   "id": "25c2ffd6",
    "metadata": {},
    "source": [
     "**What to look for:**\n",
@@ -737,7 +737,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e4f1068c",
+   "id": "0a3e2ba8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -784,7 +784,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d93c6924",
+   "id": "178f1d63",
    "metadata": {},
    "source": [
     "### Step 4: Check Worker Logs for Cache Activity"
@@ -793,7 +793,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ea9cd85",
+   "id": "aedd0d16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -824,7 +824,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "381b6083",
+   "id": "3bf4cb54",
    "metadata": {},
    "source": [
     "**What to observe:**\n",
@@ -862,7 +862,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6d85512",
+   "id": "ca461dd6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -885,7 +885,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2220b63e",
+   "id": "f645a7e8",
    "metadata": {},
    "source": [
     "### Workers Not Discovered"
@@ -894,7 +894,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "043d5329",
+   "id": "5c81b04c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -918,7 +918,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15f85d3a",
+   "id": "f8ebbe24",
    "metadata": {},
    "source": [
     "### No Requests Reaching Workers"
@@ -927,7 +927,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "069bba12",
+   "id": "17eb46c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -951,7 +951,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f087575",
+   "id": "2bb3696c",
    "metadata": {},
    "source": [
     "### Understanding Cache Sharing with NIXL\n",
@@ -985,7 +985,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3e0ec9c",
+   "id": "2a4f6df4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1002,7 +1002,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e99f6583",
+   "id": "ff52626d",
    "metadata": {},
    "source": [
     "### Step 2: Verify Lab 1 Deployment is Still Running\n",
@@ -1013,7 +1013,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d50844dc",
+   "id": "0cb9ee58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1038,7 +1038,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c390dcb3",
+   "id": "562b8369",
    "metadata": {},
    "source": [
     "---\n",
@@ -1050,13 +1050,14 @@
     "- **NVIDIA Dynamo Documentation**: https://docs.nvidia.com/dynamo/latest/\n",
     "- **Dynamo Deployment Guide**: https://docs.nvidia.com/dynamo/latest/kubernetes/deployment/\n",
     "- **Grove Operator Guide**: https://docs.nvidia.com/dynamo/latest/kubernetes/grove.html\n",
-    "- **Dynamo v0.8.0 Release Notes**: https://github.com/ai-dynamo/dynamo/releases/tag/v0.8.0\n",
-    "\n",
-    "### Advanced Topics (NATS/etcd - Optional)\n",
-    "\n",
-    "- **NATS Documentation**: https://docs.nats.io/\n",
-    "- **etcd Documentation**: https://etcd.io/docs/\n",
-    "\n",
+    "- **Dynamo v0.8.0 Release Notes**: https://github.com/ai-dynamo/dynamo/releases/tag/v0.8.0\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8c6f4df4",
+   "metadata": {},
+   "source": [
     "### Community Resources\n",
     "\n",
     "- **Dynamo GitHub**: https://github.com/ai-dynamo/dynamo\n",
